Add project description for data analysis dashboard
Added project description detailing the goals and methods for data analysis and visualization.

--- a/STDS/Task01_Excel/Description
+++ b/STDS/Task01_Excel/Description
@@ -1,1 +1,1 @@
-
+This project focuses on analyzing the dataset and presenting the results through an interactive dashboard. The main goal is to transform raw data into meaningful insights by cleaning, analyzing, and visualizing the data. The dashboard highlights key metrics and trends to support better understanding and decision-making in a clear and user-friendly way.
